--- a/horde.html
+++ b/horde.html
@@ -66,6 +66,12 @@
                         <td><a href="https://www.youtube.com/watch?v=JEyxMAF1HSM&ab_channel=GAMEXIA" target="_blank">Full</a></td>
                     </tr>
                     <tr>
+                        <th scope="row"><img src="images/firstPlace.png"><i class="fa-solid fa-people-group"></i></th>
+                        <td>Bonushoe</td>
+                        <td>24</td>
+                        <td><a href="https://www.youtube.com/watch?v=V3VBannYs2U&ab_channel=BonusGamingBattleGround" target="_blank">Full</a></td>
+                    </tr>
+                    <tr>
                         <th scope="row"><img src="images/secondPlace.png"><i class="fa-solid fa-people-group"></i></th>
                         <td>ZelexFPS</td>
                         <td>21</td>
@@ -157,15 +163,15 @@
                     </tr>
                     <tr>
                         <th scope="row"><img src="images/thirdPlace.png"><i class="fa-solid fa-people-group"></i></th>
+                        <td>HunkGeniX59</td>
+                        <td>27</td>
+                        <td><a href="https://www.youtube.com/watch?v=vyfBu5ZlGRY&ab_channel=HunkGeniX59" target="_blank">Full</a></td>
+                    </tr>
+                    <tr>
+                        <th scope="row"><i class="fa-solid fa-people-group"></i></th>
                         <td>Gaming_Games_YT</td>
                         <td>14</td>
                         <td><a href="https://www.youtube.com/watch?v=O06oJltmjY4&ab_channel=Gaming%2CGamesandmore" target="_blank">Full</a></td>
-                    </tr>
-                    <tr>
-                        <th scope="row"></th>
-                        <td></td>
-                        <td></td>
-                        <td></td>
                     </tr>
                 </tbody>
             </table>
