--- a/horde.html
+++ b/horde.html
@@ -39,6 +39,7 @@
         </div>
     </div>
     <!-- CODE DIVISION -->
+    <!-- NORMAL JAPAN -->
     <div class="BOX2">
         <div class="col-md-8 col-12 my-4 mx-auto">
             <div>
@@ -60,34 +61,34 @@
                 </thead>
                 <tbody>
                     <tr class="text-center align-middle">
-                        <th scope="row"><img src="images/firstPlace.png"><i class="fa-solid fa-people-group"></i><br><img src="images/trophy.png"><img src="images/trophy.png"><img src="images/trophy.png"></th>
+                        <th scope="row"><img src="images/firstPlace.png"><i class="fa-solid fa-people-group"></i></th>
+                        <td>RD_1998</td>
+                        <td>27</td>
+                        <td><a href="https://www.youtube.com/watch?v=pPBRclSTVQA&ab_channel=Pickledrice" target="_blank">Full</a></td>
+                    </tr>
+                    <tr class="text-center align-middle">
+                        <th scope="row"><img src="images/secondPlace.png"><i class="fa-solid fa-people-group"></i></th>
                         <td>Gamexia</td>
                         <td>24</td>
                         <td><a href="https://www.youtube.com/watch?v=JEyxMAF1HSM&ab_channel=GAMEXIA" target="_blank">Full</a></td>
                     </tr>
                     <tr class="text-center align-middle">
-                        <th scope="row"><img src="images/firstPlace.png"><i class="fa-solid fa-people-group"></i></th>
+                        <th scope="row"><img src="images/secondPlace.png"><i class="fa-solid fa-people-group"></i></th>
                         <td>Bonushoe</td>
                         <td>24</td>
                         <td><a href="https://www.youtube.com/watch?v=V3VBannYs2U&ab_channel=BonusGamingBattleGround" target="_blank">Full</a></td>
                     </tr>
                     <tr class="text-center align-middle">
-                        <th scope="row"><img src="images/secondPlace.png"><i class="fa-solid fa-people-group"></i></th>
+                        <th scope="row"><img src="images/thirdPlace.png"><i class="fa-solid fa-people-group"></i></th>
                         <td>ZelexFPS</td>
                         <td>21</td>
                         <td><a href="https://www.youtube.com/watch?v=E_GUah51jFI&ab_channel=ZelexFPS" target="_blank">Full</a></td>
-                    </tr>
-                    <tr class="text-center align-middle">
-                        <th scope="row"><img src="images/thirdPlace.png"></th>
-                        <td></td>
-                        <td></td>
-                        <td></td>
                     </tr>
                 </tbody>
             </table>
         </div>
 
-        <!-- ROME -->
+        <!-- NORMAL ROME -->
         <div class="col-md-8 col-12 my-4 mx-auto">
             <div>
                 <div class="text-light h2 d-flex justify-content-center align-items-center mb-0"><img src="images/hordeRicon.png" class="me-2">XL Rome (N)</div>
@@ -108,28 +109,28 @@
                 </thead>
                 <tbody>
                     <tr class="text-center align-middle">
-                        <th scope="row"><img src="images/firstPlace.png"><i class="fa-solid fa-people-group"></i><br><img src="images/trophy.png"><img src="images/trophy.png"><img src="images/trophy.png"> </th>
+                        <th scope="row"><img src="images/firstPlace.png"><i class="fa-solid fa-people-group"></i> </th>
                         <td>Gamexia</td>
                         <td>33</td>
                         <td><a href="https://www.youtube.com/watch?v=SeG1MoI8ByA&ab_channel=GAMEXIA" target="_blank">Full</a></td>
                     </tr>
                     <tr class="text-center align-middle">
-                        <th scope="row"><img src="images/secondPlace.png"></th>
+                        <th scope="row"><img src="images/secondPlace.png"><i class="fa-solid fa-people-group"></i></th>
+                        <td>GreatDragolas</td>
+                        <td>19</td>
+                        <td><a href="https://www.youtube.com/watch?v=WY3A_7or2jI&ab_channel=FireTeamShooters" target="_blank">Full</a></td>
+                    </tr>
+                    <tr class="text-center align-middle">
+                        <th scope="row"><img src="images/thirdPlace.png"><i class="fa-solid fa-people-group"></i></th>
                         <td>LordGalller</td>
                         <td>9</td>
                         <td><a href="https://www.youtube.com/watch?v=ijS7pH6LKlU&t=18s&ab_channel=FireTeamShooters" target="_blank">Full</a></td>
-                    </tr>
-                    <tr class="text-center align-middle">
-                        <th scope="row"><img src="images/thirdPlace.png"></th>
-                        <td></td>
-                        <td></td>
-                        <td></td>
                     </tr>
                 </tbody>
             </table>
         </div>
 
-        <!-- SOUTH KOREA -->
+        <!-- NORMAL SOUTH KOREA -->
         <div class="col-md-8 col-12 my-4 mx-auto">
             <div>
                 <div class="text-light h2 d-flex justify-content-center align-items-center mb-0"><img src="images/hordeSKicon.png" class="me-2">South Korea (N)</div>
@@ -177,7 +178,7 @@
             </table>
         </div>
 
-        <!-- NEW YORK -->
+        <!-- NORMAL NEW YORK -->
         <div class="col-md-8 col-12 my-4 mx-auto">
             <table class="table table-striped table-borderless rounded-5 table-dark">
                 <div>
@@ -199,18 +200,24 @@
                 <tbody>
                     <tr class="text-center align-middle">
                         <th scope="row"><img src="images/firstPlace.png"><i class="fa-solid fa-people-group"></i></th>
+                        <td>Renegade LK</td>
+                        <td>31</td>
+                        <td><a href="https://www.youtube.com/watch?v=oXVFK3sWhAE&t=28s&ab_channel=RenegadeLK" target="_blank">Full</a></td>
+                    </tr>
+                    <tr class="text-center align-middle">
+                        <th scope="row"><img src="images/secondPlace.png"><i class="fa-solid fa-people-group"></i></th>
                         <td>yahowyada</td>
                         <td>30</td>
                         <td><a href="https://www.youtube.com/watch?v=Zg-UzLFCNjc&t=8160s&ab_channel=yahowyadaTV" target="_blank">Full</a></td>
                     </tr>
                     <tr class="text-center align-middle">
-                        <th scope="row"><img src="images/secondPlace.png"><i class="fa-solid fa-person-rifle"></i></i></th>
+                        <th scope="row"><img src="images/thirdPlace.png"><i class="fa-solid fa-person-rifle"></i></i></th>
                         <td>Sherm</td>
                         <td>22</td>
                         <td><a href="https://www.youtube.com/watch?v=GSXyLCjqqT4&t=2288s&ab_channel=Wenox" target="_blank">Full</a></td>
                     </tr>
                     <tr class="text-center align-middle">
-                        <th scope="row"><img src="images/thirdPlace.png"></th>
+                        <th scope="row"></th>
                         <td></td>
                         <td></td>
                         <td></td>
@@ -219,7 +226,7 @@
             </table>
         </div>
 
-        <!-- Jerusalem -->
+        <!-- NORMAL Jerusalem -->
         <div class="col-md-8 col-12 my-4 mx-auto">
             <div>
                 <div class="text-light h2 d-flex justify-content-center align-items-center mb-0"><img src="images/hordeJicon.png" class="me-2">Jerusalem (N)</div>
@@ -240,22 +247,28 @@
                 </thead>
                 <tbody>
                     <tr class="text-center align-middle">
-                        <th scope="row"><img src="images/firstPlace.png"><i class="fa-solid fa-people-group"></i><br><img src="images/trophy.png"><img src="images/trophy.png"><img src="images/trophy.png"> </th>
+                        <th scope="row"><img src="images/firstPlace.png"><i class="fa-solid fa-people-group"></i></th>
+                        <td>Senku_Jo2</td>
+                        <td>55</td>
+                        <td><a href="https://www.youtube.com/watch?v=VRUy7Q9YTqg&ab_channel=Senku_Jo2" target=" _blank">Full</a></td>
+                    </tr>
+                    <tr class="text-center align-middle">
+                        <th scope="row"><img src="images/secondPlace.png"><i class="fa-solid fa-people-group"></i></th>
+                        <td>Renegade LK</td>
+                        <td>30</td>
+                        <td><a href="https://www.youtube.com/watch?v=BixQEj5t5eo&ab_channel=RenegadeLK" target="_blank">Full</a></td>
+                    </tr>
+                    <tr class="text-center align-middle">
+                        <th scope="row"><img src="images/thirdPlace.png"><i class="fa-solid fa-people-group"></i></th>
                         <td>Gamexia</td>
                         <td>17</td>
                         <td><a href="https://www.youtube.com/watch?v=53kbtUlM2Dk&ab_channel=GAMEXIA" target="_blank">Full</a></td>
                     </tr>
                     <tr class="text-center align-middle">
-                        <th scope="row"><img src="images/secondPlace.png"></th>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                    </tr>
-                    <tr class="text-center align-middle">
-                        <th scope="row"><img src="images/thirdPlace.png"></th>
-                        <td></td>
-                        <td></td>
-                        <td></td>
+                        <th scope="row"><img src="images/thirdPlace.png"><i class="fa-solid fa-people-group"></i></th>
+                        <td>Mr.Mimo</td>
+                        <td>17</td>
+                        <td><a href="https://www.youtube.com/watch?v=Deg5QdBUBv8&ab_channel=GamingTamari" target="_blank">Full</a></td>
                     </tr>
                 </tbody>
             </table>
@@ -268,7 +281,7 @@
 
     <!-- CODE DIVISION -->
     <div class="BOX1">
-        <!-- JAPAN -->
+        <!-- HARD JAPAN -->
         <div class="col-md-8 col-12 my-4 mx-auto">
             <div>
                 <div class="text-light h2 d-flex justify-content-center align-items-center mb-0"><img src="images/hordeJapanicon.png" class="me-2">XL Tokyo (H)</div>
@@ -295,10 +308,10 @@
                         <td><a href="https://www.youtube.com/watch?v=rz3vFs1akc4&ab_channel=JYSoon" target="_blank">Full</a></td>
                     </tr>
                     <tr class="text-center align-middle">
-                        <th scope="row"><img src="images/secondPlace.png"></th>
-                        <td></td>
-                        <td></td>
-                        <td></td>
+                        <th scope="row"><img src="images/secondPlace.png"><i class="fa-solid fa-people-group"></i></th>
+                        <td>Renegade LK</td>
+                        <td>22</td>
+                        <td><a href="https://www.youtube.com/watch?v=uqYB9sQ6lXM&ab_channel=RenegadeLK" target="_blank">Full</a></td>
                     </tr>
                     <tr class="text-center align-middle">
                         <th scope="row"><img src="images/thirdPlace.png"></th>
@@ -310,7 +323,7 @@
             </table>
         </div>
 
-        <!-- ROME -->
+        <!-- HARD ROME -->
         <div class="col-md-8 col-12 my-4 mx-auto">
             <div>
                 <div class="text-light h2 d-flex justify-content-center align-items-center mb-0"><img src="images/hordeRicon.png" class="me-2">XL Rome (H)</div>
@@ -364,7 +377,7 @@
             </table>
         </div>
 
-        <!-- SOUTH KOREA -->
+        <!-- HARD SOUTH KOREA -->
         <div class="col-md-8 col-12 my-4 mx-auto">
             <div>
                 <div class="text-light h2 d-flex justify-content-center align-items-center mb-0"><img src="images/hordeSKicon.png" class="me-2">South Korea (H)</div>
@@ -397,7 +410,7 @@
                         <td><a href="https://www.youtube.com/watch?v=zGT5wC5MUBI&ab_channel=WesleyAnge" target="_blank">Full</a></td>
                     </tr>
                     <tr class="text-center align-middle">
-                        <th scope="row"><img src="images/thirdPlace.png"><i class="fa-solid fa-people-group"></i></th>
+                        <th scope="row"><img src="images/thirdPlace.png"><i class="fa-solid fa-people-group"></i><br><img src="images/trophy.png"><img src="images/trophy.png"></th>
                         <td>SiberianPsych0</td>
                         <td>41</td>
                         <td><a href="https://www.youtube.com/watch?v=8wIvRcx-KJg&ab_channel=SiberianPsych0" target="_blank">Full</a></td>
@@ -424,7 +437,7 @@
             </table>
         </div>
 
-        <!-- NEW YORK -->
+        <!-- HARD NEW YORK -->
         <div class="col-md-8 col-12 my-4 mx-auto">
             <table class="table table-striped table-borderless rounded-5 table-dark">
                 <div>
@@ -445,7 +458,7 @@
                 </thead>
                 <tbody>
                     <tr class="text-center align-middle">
-                        <th scope="row"><img src="images/firstPlace.png"><i class="fa-solid fa-people-group"></i></th>
+                        <th scope="row"><img src="images/firstPlace.png"><i class="fa-solid fa-people-group"></i><br><img src="images/trophy.png"><img src="images/trophy.png"></th>
                         <td>SiberianPsych0</td>
                         <td>70</td>
                         <td><a href="https://www.youtube.com/watch?v=Ao2Fd6WEdB4&ab_channel=SiberianPsych0" target="_blank">Full</a></td>
@@ -466,7 +479,7 @@
             </table>
         </div>
 
-        <!-- Jerusalem -->
+        <!-- HARD Jerusalem -->
         <div class="col-md-8 col-12 my-4 mx-auto">
             <div>
                 <div class="text-light h2 d-flex justify-content-center align-items-center mb-0"><img src="images/hordeJicon.png" class="me-2">Jerusalem (H)</div>
@@ -487,7 +500,7 @@
                 </thead>
                 <tbody>
                     <tr class="text-center align-middle">
-                        <th scope="row"><img src="images/firstPlace.png"><i class="fa-solid fa-people-group"></i></th>
+                        <th scope="row"><img src="images/firstPlace.png"><i class="fa-solid fa-people-group"></i><br><img src="images/trophy.png"><img src="images/trophy.png"></th>
                         <td>SiberianPsych0</td>
                         <td>45</td>
                         <td><a href="https://www.youtube.com/watch?v=2_FSYDw7So8&ab_channel=SiberianPsych0" target="_blank">Full</a></td>
@@ -499,10 +512,10 @@
                         <td><a href="https://www.youtube.com/watch?v=TQKaulcvGbc&ab_channel=Tr%E1%BB%8Dng%C4%90%E1%BA%A1t" target="_blank">Full</a></td>
                     </tr>
                     <tr class="text-center align-middle">
-                        <th scope="row"><img src="images/thirdPlace.png"></th>
-                        <td></td>
-                        <td></td>
-                        <td></td>
+                        <th scope="row"><img src="images/thirdPlace.png"><i class="fa-solid fa-people-group"></i></th>
+                        <td>panoramix1412</td>
+                        <td>10</td>
+                        <td><a href="https://www.youtube.com/watch?v=g9bqmLe5oww&ab_channel=TripleJump" target="_blank">Full</a></td>
                     </tr>
                 </tbody>
             </table>
