Added team features

--- a/horde.html
+++ b/horde.html
@@ -315,9 +315,19 @@
                     </tr>
                     <tr class="text-center align-middle">
                         <th scope="row"><img src="images/thirdPlace.png"></th>
-                        <td></td>
-                        <td></td>
-                        <td></td>
+                        <td class="dropup">
+                            <button class="btn btn-dark dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                Team Caprice
+                            </button>
+                            <ul class="dropdown-menu z-3 bg-secondary">
+                                <li><small class="dropdown-item text-light">CapriceYuri</small></li>
+                                <li><small class="dropdown-item text-light">CapriceYuri</small></li>
+                                <li><small class="dropdown-item text-light">CapriceYuri</small></li>
+                                <li><small class="dropdown-item text-light">CapriceYuri</small></li>
+                            </ul>
+                        </td>
+                        <td>999</td>
+                        <td>TESTING</td>
                     </tr>
                 </tbody>
             </table>
