Finalized team dropdown layout/color

--- a/horde.html
+++ b/horde.html
@@ -316,14 +316,14 @@
                     <tr class="text-center align-middle">
                         <th scope="row"><img src="images/thirdPlace.png"></th>
                         <td class="dropup">
-                            <button class="btn btn-dark dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            <button class="btn dropdown-toggle text-light" type="button" data-bs-toggle="dropdown" aria-expanded="false">
                                 Team Caprice
                             </button>
-                            <ul class="dropdown-menu z-3 bg-secondary">
-                                <li><small class="dropdown-item text-light">CapriceYuri</small></li>
-                                <li><small class="dropdown-item text-light">CapriceYuri</small></li>
-                                <li><small class="dropdown-item text-light">CapriceYuri</small></li>
-                                <li><small class="dropdown-item text-light">CapriceYuri</small></li>
+                            <ul class="dropdown-menu z-3 bg-secondary text-center fw-bold">
+                                <li><small class="dropdown-item-text text-warning">Captain</small></li>
+                                <li><small class="dropdown-item-text text-light">Teammate 2</small></li>
+                                <li><small class="dropdown-item-text text-light">Teammate 3</small></li>
+                                <li><small class="dropdown-item-text text-light">Teammate 4</small></li>
                             </ul>
                         </td>
                         <td>999</td>
