Updated team groups

--- a/horde.html
+++ b/horde.html
@@ -361,7 +361,15 @@
                     </tr>
                     <tr class="text-center align-middle">
                         <th scope="row"><img src="images/secondPlace.png"><i class="fa-solid fa-people-group"></i></th>
-                        <td>LegioX Wintersky</td>
+                        <td class="dropup">
+                            <button class="btn dropdown-toggle text-light" type="button" data-bs-toggle="dropdown" aria-expanded="false">LegioX Wintersky</button>
+                            <ul class="dropdown-menu z-3 bg-secondary text-center fw-bold">
+                                <li><small class="dropdown-item-text text-warning">LegioX Wintersky</small></li>
+                                <li><small class="dropdown-item-text text-light">gogu7332</small></li>
+                                <li><small class="dropdown-item-text text-light">XxFriction</small></li>
+                                <li><small class="dropdown-item-text text-light">DC GOAT</small></li>
+                            </ul>
+                        </td>
                         <td>61</td>
                         <td><a href="https://www.youtube.com/watch?v=7vyWeRqXEE0&ab_channel=LegioXWintersky" target="_blank">Full</a></td>
                     </tr>
@@ -373,7 +381,15 @@
                     </tr>
                     <tr class="text-center align-middle">
                         <th scope="row"><i class="fa-solid fa-people-group"></i></th>
-                        <td>Rabi William</td>
+                        <td class="dropup">
+                            <button class="btn dropdown-toggle text-light" type="button" data-bs-toggle="dropdown" aria-expanded="false">Rabi Knights</button>
+                            <ul class="dropdown-menu z-3 bg-secondary text-center fw-bold">
+                                <li><small class="dropdown-item-text text-warning">Rabi William</small></li>
+                                <li><small class="dropdown-item-text text-light">BtypeSasoriza</small></li>
+                                <li><small class="dropdown-item-text text-light">akachan</small></li>
+                                <li><small class="dropdown-item-text text-light">kozaakuracom</small></li>
+                            </ul>
+                        </td>
                         <td>35</td>
                         <td><a href="https://www.youtube.com/watch?v=sGksBUE_05U&ab_channel=%E3%83%A9%E3%83%93%E3%82%A6%E3%82%A3%E3%83%AA%E3%82%A2%E3%83%A0-RabiWilliam-" target="_blank">Full</a></td>
                     </tr>
