--- a/horde.html
+++ b/horde.html
@@ -355,7 +355,7 @@
                 <tbody>
                     <tr class="text-center align-middle">
                         <th scope="row"><img src="images/firstPlace.png"><i class="fa-solid fa-people-group"></i></th>
-                        <td>貓白</td>
+                        <td>貓白<br><small class="text-warning">(HORDE IMMUNITY XL)</small></td>
                         <td>81</td>
                         <td><a href="https://www.youtube.com/watch?v=LABCyfjCNH0&list=PLDYihq39QKsn5ne3G3smRkvW-3hd8zOmi&index=1&ab_channel=%E8%B2%93%E7%99%BD" target="_blank">Part 1</a> <a href="https://www.youtube.com/watch?v=6Mu7rN6Kka8&list=PLDYihq39QKsn5ne3G3smRkvW-3hd8zOmi&index=2&ab_channel=%E8%B2%93%E7%99%BD" target="_blank">Part 2</a></td>
                     </tr>
@@ -363,6 +363,22 @@
                         <th scope="row"><img src="images/secondPlace.png"><i class="fa-solid fa-people-group"></i></th>
                         <td class="dropup">
                             <button class="btn dropdown-toggle text-light" type="button" data-bs-toggle="dropdown" aria-expanded="false">LegioX Wintersky</button>
+                            <br><small class="text-warning">(HORDE IMMUNITY XL #3)</small>
+                            <ul class="dropdown-menu z-3 bg-secondary text-center fw-bold">
+                                <li><small class="dropdown-item-text text-warning">LegioX Wintersky</small></li>
+                                <li><small class="dropdown-item-text text-light">gogu7332</small></li>
+                                <li><small class="dropdown-item-text text-light">LegioX_DeadlySin</small></li>
+                                <li><small class="dropdown-item-text text-light">ABA-180MM</small></li>
+                            </ul>
+                        </td>
+                        <td>68</td>
+                        <td><a href="https://www.youtube.com/watch?v=t_Z6wcAW2MQ&ab_channel=LegioXWintersky" target="_blank">Full</a></td>
+                    </tr>
+                    <tr class="text-center align-middle">
+                        <th scope="row"></th>
+                        <td class="dropup">
+                            <button class="btn dropdown-toggle text-light" type="button" data-bs-toggle="dropdown" aria-expanded="false">LegioX Wintersky</button>
+                            <br><small class="text-warning">(HORDE IMMUNITY XL #2)</small>
                             <ul class="dropdown-menu z-3 bg-secondary text-center fw-bold">
                                 <li><small class="dropdown-item-text text-warning">LegioX Wintersky</small></li>
                                 <li><small class="dropdown-item-text text-light">gogu7332</small></li>
@@ -374,6 +390,21 @@
                         <td><a href="https://www.youtube.com/watch?v=7vyWeRqXEE0&ab_channel=LegioXWintersky" target="_blank">Full</a></td>
                     </tr>
                     <tr class="text-center align-middle">
+                        <th scope="row"></th>
+                        <td class="dropup">
+                            <button class="btn dropdown-toggle text-light" type="button" data-bs-toggle="dropdown" aria-expanded="false">LegioX_Wintersky</button>
+                            <br><small class="text-warning">(HORDE IMMUNITY XL #1)</small>
+                            <ul class="dropdown-menu z-3 bg-secondary text-center fw-bold">
+                                <li><small class="dropdown-item-text text-warning">LegioX_Wintersky</small></li>
+                                <li><small class="dropdown-item-text text-light">gogu7332</small></li>
+                                <li><small class="dropdown-item-text text-light">LegioX_DeadlySin</small></li>
+                                <li><small class="dropdown-item-text text-light">HiRUnknown</small></li>
+                            </ul>
+                        </td>
+                        <td>52</td>
+                        <td><a href="https://www.youtube.com/watch?v=J_mgv-MR5iE&ab_channel=LegioXWintersky" target="_blank">Full</a></td>
+                    </tr>
+                    <tr class="text-center align-middle">
                         <th scope="row"><img src="images/thirdPlace.png"><i class="fa-solid fa-people-group"></i></th>
                         <td>Villainize</td>
                         <td>38</td>
@@ -383,6 +414,7 @@
                         <th scope="row"><i class="fa-solid fa-people-group"></i></th>
                         <td class="dropup">
                             <button class="btn dropdown-toggle text-light" type="button" data-bs-toggle="dropdown" aria-expanded="false">Rabi Knights</button>
+                            <br><small class="text-warning">(HORDE IMMUNITY XL)</small>
                             <ul class="dropdown-menu z-3 bg-secondary text-center fw-bold">
                                 <li><small class="dropdown-item-text text-warning">Rabi William</small></li>
                                 <li><small class="dropdown-item-text text-light">BtypeSasoriza</small></li>
