--- a/horde.html
+++ b/horde.html
@@ -5,10 +5,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>World War Z: Aftermath</title>
-
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous" />
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous" defer></script>
     <link rel="stylesheet" href="touchup.css" />
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous" defer></script>
     <script src="logicH.js" defer></script>
     <script src="https://kit.fontawesome.com/852e8a85e4.js" crossorigin="anonymous" defer></script>
 </head>
@@ -355,7 +354,7 @@
                 <tbody>
                     <tr class="text-center align-middle">
                         <th scope="row"><img src="images/firstPlace.png"><i class="fa-solid fa-people-group"></i></th>
-                        <td>貓白<br><small class="text-warning">(HORDE IMMUNITY XL)</small></td>
+                        <td>貓白<br><small class="text-warning">(HORDE IMMUNITY)</small></td>
                         <td>81</td>
                         <td><a href="https://www.youtube.com/watch?v=LABCyfjCNH0&list=PLDYihq39QKsn5ne3G3smRkvW-3hd8zOmi&index=1&ab_channel=%E8%B2%93%E7%99%BD" target="_blank">Part 1</a> <a href="https://www.youtube.com/watch?v=6Mu7rN6Kka8&list=PLDYihq39QKsn5ne3G3smRkvW-3hd8zOmi&index=2&ab_channel=%E8%B2%93%E7%99%BD" target="_blank">Part 2</a></td>
                     </tr>
@@ -363,7 +362,7 @@
                         <th scope="row"><img src="images/secondPlace.png"><i class="fa-solid fa-people-group"></i></th>
                         <td class="dropup">
                             <button class="btn dropdown-toggle text-light" type="button" data-bs-toggle="dropdown" aria-expanded="false">LegioX Wintersky</button>
-                            <br><small class="text-warning">(HORDE IMMUNITY XL #3)</small>
+                            <br><small class="text-warning">(HORDE IMMUNITY #3)</small>
                             <ul class="dropdown-menu z-3 bg-secondary text-center fw-bold">
                                 <li><small class="dropdown-item-text text-warning">LegioX Wintersky</small></li>
                                 <li><small class="dropdown-item-text text-light">gogu7332</small></li>
@@ -378,7 +377,7 @@
                         <th scope="row"></th>
                         <td class="dropup">
                             <button class="btn dropdown-toggle text-light" type="button" data-bs-toggle="dropdown" aria-expanded="false">LegioX Wintersky</button>
-                            <br><small class="text-warning">(HORDE IMMUNITY XL #2)</small>
+                            <br><small class="text-warning">(HORDE IMMUNITY #2)</small>
                             <ul class="dropdown-menu z-3 bg-secondary text-center fw-bold">
                                 <li><small class="dropdown-item-text text-warning">LegioX Wintersky</small></li>
                                 <li><small class="dropdown-item-text text-light">gogu7332</small></li>
@@ -393,7 +392,7 @@
                         <th scope="row"></th>
                         <td class="dropup">
                             <button class="btn dropdown-toggle text-light" type="button" data-bs-toggle="dropdown" aria-expanded="false">LegioX_Wintersky</button>
-                            <br><small class="text-warning">(HORDE IMMUNITY XL #1)</small>
+                            <br><small class="text-warning">(HORDE IMMUNITY #1)</small>
                             <ul class="dropdown-menu z-3 bg-secondary text-center fw-bold">
                                 <li><small class="dropdown-item-text text-warning">LegioX_Wintersky</small></li>
                                 <li><small class="dropdown-item-text text-light">gogu7332</small></li>
@@ -414,7 +413,7 @@
                         <th scope="row"><i class="fa-solid fa-people-group"></i></th>
                         <td class="dropup">
                             <button class="btn dropdown-toggle text-light" type="button" data-bs-toggle="dropdown" aria-expanded="false">Rabi Knights</button>
-                            <br><small class="text-warning">(HORDE IMMUNITY XL)</small>
+                            <br><small class="text-warning">(HORDE IMMUNITY)</small>
                             <ul class="dropdown-menu z-3 bg-secondary text-center fw-bold">
                                 <li><small class="dropdown-item-text text-warning">Rabi William</small></li>
                                 <li><small class="dropdown-item-text text-light">BtypeSasoriza</small></li>
