Update Team information & names

--- a/horde.html
+++ b/horde.html
@@ -361,10 +361,10 @@
                     <tr class="text-center align-middle">
                         <th scope="row"><img src="images/secondPlace.png"><i class="fa-solid fa-people-group"></i></th>
                         <td class="dropup">
-                            <button class="btn dropdown-toggle text-light" type="button" data-bs-toggle="dropdown" aria-expanded="false">LegioX Wintersky</button>
+                            <button class="btn dropdown-toggle text-light" type="button" data-bs-toggle="dropdown" aria-expanded="false">Horde Legends Team</button>
                             <br><small class="text-warning">(HORDE IMMUNITY #3)</small>
                             <ul class="dropdown-menu z-3 bg-secondary text-center fw-bold">
-                                <li><small class="dropdown-item-text text-warning">LegioX Wintersky</small></li>
+                                <li><small class="dropdown-item-text text-light">LegioX Wintersky</small></li>
                                 <li><small class="dropdown-item-text text-light">gogu7332</small></li>
                                 <li><small class="dropdown-item-text text-light">LegioX_DeadlySin</small></li>
                                 <li><small class="dropdown-item-text text-light">ABA-180MM</small></li>
@@ -376,10 +376,10 @@
                     <tr class="text-center align-middle">
                         <th scope="row"></th>
                         <td class="dropup">
-                            <button class="btn dropdown-toggle text-light" type="button" data-bs-toggle="dropdown" aria-expanded="false">LegioX Wintersky</button>
+                            <button class="btn dropdown-toggle text-light" type="button" data-bs-toggle="dropdown" aria-expanded="false">Horde Legends Team</button>
                             <br><small class="text-warning">(HORDE IMMUNITY #2)</small>
                             <ul class="dropdown-menu z-3 bg-secondary text-center fw-bold">
-                                <li><small class="dropdown-item-text text-warning">LegioX Wintersky</small></li>
+                                <li><small class="dropdown-item-text text-light">LegioX Wintersky</small></li>
                                 <li><small class="dropdown-item-text text-light">gogu7332</small></li>
                                 <li><small class="dropdown-item-text text-light">XxFriction</small></li>
                                 <li><small class="dropdown-item-text text-light">DC GOAT</small></li>
@@ -391,10 +391,10 @@
                     <tr class="text-center align-middle">
                         <th scope="row"></th>
                         <td class="dropup">
-                            <button class="btn dropdown-toggle text-light" type="button" data-bs-toggle="dropdown" aria-expanded="false">LegioX_Wintersky</button>
+                            <button class="btn dropdown-toggle text-light" type="button" data-bs-toggle="dropdown" aria-expanded="false">Horde Legends Team</button>
                             <br><small class="text-warning">(HORDE IMMUNITY #1)</small>
                             <ul class="dropdown-menu z-3 bg-secondary text-center fw-bold">
-                                <li><small class="dropdown-item-text text-warning">LegioX_Wintersky</small></li>
+                                <li><small class="dropdown-item-text text-light">LegioX Wintersky</small></li>
                                 <li><small class="dropdown-item-text text-light">gogu7332</small></li>
                                 <li><small class="dropdown-item-text text-light">LegioX_DeadlySin</small></li>
                                 <li><small class="dropdown-item-text text-light">HiRUnknown</small></li>
@@ -456,7 +456,15 @@
                 <tbody>
                     <tr class="text-center align-middle">
                         <th scope="row"><img src="images/firstPlace.png"><i class="fa-solid fa-people-group"></i></th>
-                        <td>tokuhime1582</td>
+                        <td class="dropup">
+                            <button class="btn dropdown-toggle text-light" type="button" data-bs-toggle="dropdown" aria-expanded="false">Humildad</button>
+                            <ul class="dropdown-menu z-3 bg-secondary text-center fw-bold">
+                                <li><small class="dropdown-item-text text-light">tokuhime1582</small></li>
+                                <li><small class="dropdown-item-text text-light">LegioX Wintersky</small></li>
+                                <li><small class="dropdown-item-text text-light">MVP_Popeye</small></li>
+                                <li><small class="dropdown-item-text text-light">PsychoPenetrador</small></li>
+                            </ul>
+                        </td>
                         <td>64</td>
                         <td><a href="https://www.youtube.com/watch?v=usyUM4H49_s&t=8779s&ab_channel=KimPetrasandGames" target="_blank">Full</a></td>
                     </tr>
