Added players to ranking

--- a/horde.html
+++ b/horde.html
@@ -61,24 +61,30 @@
                 <tbody>
                     <tr class="text-center align-middle">
                         <th scope="row"><img src="images/firstPlace.png"><i class="fa-solid fa-people-group"></i></th>
+                        <td>titojimmyyy</td>
+                        <td>32</td>
+                        <td><a href="https://www.youtube.com/watch?v=hwuhoOitGNI" target="_blank">Full</a></td>
+                    </tr>
+                    <tr class="text-center align-middle">
+                        <th scope="row"><img src="images/secondPlace.png"><i class="fa-solid fa-people-group"></i></th>
                         <td>RD_1998</td>
                         <td>27</td>
                         <td><a href="https://www.youtube.com/watch?v=pPBRclSTVQA&ab_channel=Pickledrice" target="_blank">Full</a></td>
                     </tr>
                     <tr class="text-center align-middle">
-                        <th scope="row"><img src="images/secondPlace.png"><i class="fa-solid fa-people-group"></i></th>
+                        <th scope="row"><img src="images/thirdPlace.png"><i class="fa-solid fa-people-group"></i></th>
                         <td>Gamexia</td>
                         <td>24</td>
                         <td><a href="https://www.youtube.com/watch?v=JEyxMAF1HSM&ab_channel=GAMEXIA" target="_blank">Full</a></td>
                     </tr>
                     <tr class="text-center align-middle">
-                        <th scope="row"><img src="images/secondPlace.png"><i class="fa-solid fa-people-group"></i></th>
+                        <th scope="row"><img src="images/thirdPlace.png"><i class="fa-solid fa-people-group"></i></th>
                         <td>Bonushoe</td>
                         <td>24</td>
                         <td><a href="https://www.youtube.com/watch?v=V3VBannYs2U&ab_channel=BonusGamingBattleGround" target="_blank">Full</a></td>
                     </tr>
                     <tr class="text-center align-middle">
-                        <th scope="row"><img src="images/thirdPlace.png"><i class="fa-solid fa-people-group"></i></th>
+                        <th scope="row"><i class="fa-solid fa-people-group"></i></th>
                         <td>ZelexFPS</td>
                         <td>21</td>
                         <td><a href="https://www.youtube.com/watch?v=E_GUah51jFI&ab_channel=ZelexFPS" target="_blank">Full</a></td>
@@ -210,16 +216,16 @@
                         <td><a href="https://www.youtube.com/watch?v=Zg-UzLFCNjc&t=8160s&ab_channel=yahowyadaTV" target="_blank">Full</a></td>
                     </tr>
                     <tr class="text-center align-middle">
-                        <th scope="row"><img src="images/thirdPlace.png"><i class="fa-solid fa-person-rifle"></i></i></th>
+                        <th scope="row"><img src="images/thirdPlace.png"><i class="fa-solid fa-people-group"></i></th>
+                        <td>SGTBrianTheYoshi</td>
+                        <td>23</td>
+                        <td><a href="https://www.youtube.com/watch?v=aWv8QJW8wQw" target="_blank">Full</a></td>
+                    </tr>
+                    <tr class="text-center align-middle">
+                        <th scope="row"><i class="fa-solid fa-person-rifle"></i></th>
                         <td>Sherm</td>
                         <td>22</td>
                         <td><a href="https://www.youtube.com/watch?v=GSXyLCjqqT4&t=2288s&ab_channel=Wenox" target="_blank">Full</a></td>
-                    </tr>
-                    <tr class="text-center align-middle">
-                        <th scope="row"></th>
-                        <td></td>
-                        <td></td>
-                        <td></td>
                     </tr>
                 </tbody>
             </table>
@@ -313,20 +319,10 @@
                         <td><a href="https://www.youtube.com/watch?v=uqYB9sQ6lXM&ab_channel=RenegadeLK" target="_blank">Full</a></td>
                     </tr>
                     <tr class="text-center align-middle">
-                        <th scope="row"><img src="images/thirdPlace.png"></th>
-                        <td class="dropup">
-                            <button class="btn dropdown-toggle text-light" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                Team Caprice
-                            </button>
-                            <ul class="dropdown-menu z-3 bg-secondary text-center fw-bold">
-                                <li><small class="dropdown-item-text text-warning">Captain</small></li>
-                                <li><small class="dropdown-item-text text-light">Teammate 2</small></li>
-                                <li><small class="dropdown-item-text text-light">Teammate 3</small></li>
-                                <li><small class="dropdown-item-text text-light">Teammate 4</small></li>
-                            </ul>
-                        </td>
-                        <td>999</td>
-                        <td>TESTING</td>
+                        <th scope="row"><img src="images/thirdPlace.png"><i class="fa-solid fa-people-group"></i></th>
+                        <td>titojimmyyy</td>
+                        <td>15</td>
+                        <td><a href="https://www.youtube.com/watch?v=Jek6mCBMCUU" target="_blank">Full</a></td>
                     </tr>
                 </tbody>
             </table>
@@ -405,6 +401,12 @@
                     </tr>
                     <tr class="text-center align-middle">
                         <th scope="row"><img src="images/thirdPlace.png"><i class="fa-solid fa-people-group"></i></th>
+                        <td>Gobuemon</td>
+                        <td>40</td>
+                        <td><a href="https://www.youtube.com/watch?v=wYyXl_J3ks4" target="_blank">Full</a></td>
+                    </tr>
+                    <tr class="text-center align-middle">
+                        <th scope="row"><i class="fa-solid fa-people-group"></i></th>
                         <td>Villainize</td>
                         <td>38</td>
                         <td><a href="https://www.youtube.com/watch?v=_FMtQh0cYBQ&ab_channel=Villainize" target="_blank">Full</a></td>
@@ -495,8 +497,20 @@
                     <tr class="text-center align-middle">
                         <th scope="row"><i class="fa-solid fa-person-rifle"></i></th>
                         <td>Rainiere13</td>
-                        <td>22</td>
+                        <td>21</td>
                         <td><a href="https://www.youtube.com/watch?v=S_Mr8DdkNX4&ab_channel=Rainiere888" target="_blank">Full</a></td>
+                    </tr>
+                    <tr class="text-center align-middle">
+                        <th scope="row"><i class="fa-solid fa-people-group"></i></th>
+                        <td>titojimmyyy</td>
+                        <td>20</td>
+                        <td><a href="https://www.youtube.com/watch?v=hJyPgUgcGaw" target="_blank">Full</a></td>
+                    </tr>
+                    <tr class="text-center align-middle">
+                        <th scope="row"><i class="fa-solid fa-people-group"></i></th>
+                        <td>Sobdgo30</td>
+                        <td>13</td>
+                        <td><a href="https://www.youtube.com/watch?v=0mOGQOCPFbU&t=314s" target="_blank">Full</a></td>
                     </tr>
                 </tbody>
             </table>
