Added new team for HORDE IMMUNITY

--- a/horde.html
+++ b/horde.html
@@ -427,6 +427,21 @@
                         <td><a href="https://www.youtube.com/watch?v=sGksBUE_05U&ab_channel=%E3%83%A9%E3%83%93%E3%82%A6%E3%82%A3%E3%83%AA%E3%82%A2%E3%83%A0-RabiWilliam-" target="_blank">Full</a></td>
                     </tr>
                     <tr class="text-center align-middle">
+                        <th scope="row"><i class="fa-solid fa-people-group"></i></th>
+                        <td class="dropup">
+                            <button class="btn dropdown-toggle text-light" type="button" data-bs-toggle="dropdown" aria-expanded="false">KR WWZ Team</button>
+                            <br><small class="text-warning">(HORDE IMMUNITY)</small>
+                            <ul class="dropdown-menu z-3 bg-secondary text-center fw-bold">
+                                <li><small class="dropdown-item-text text-warning">모나헌스</small></li>
+                                <li><small class="dropdown-item-text text-light">ChickenBritto</small></li>
+                                <li><small class="dropdown-item-text text-light">Zaitsev_SFC</small></li>
+                                <li><small class="dropdown-item-text text-light">мεясεdεѕ εїз</small></li>
+                            </ul>
+                        </td>
+                        <td>34</td>
+                        <td><a href="https://www.youtube.com/watch?v=VQnrGE4ixkY" target="_blank">Full</a></td>
+                    </tr>
+                    <tr class="text-center align-middle">
                         <th scope="row"><i class="fa-solid fa-person-rifle"></i></th>
                         <td>SiberianPsych0</td>
                         <td>20</td>
