--- a/horde.html
+++ b/horde.html
@@ -358,6 +358,37 @@
                         <th scope="row"><img src="images/secondPlace.png"><i class="fa-solid fa-people-group"></i></th>
                         <td class="dropup">
                             <button class="btn dropdown-toggle text-light" type="button" data-bs-toggle="dropdown" aria-expanded="false">Horde Legends Team</button>
+                            <br><small class="text-warning">(HORDE IMMUNITY #5)</small>
+                            <ul class="dropdown-menu z-3 bg-secondary text-center fw-bold">
+                                <li><small class="dropdown-item-text text-light">gogu7382</small></li>
+                                <li><small class="dropdown-item-text text-light">LegioX Wintersky</small></li>
+                                <li><small class="dropdown-item-text text-light">HiRUnknown</small></li>
+                                <li><small class="dropdown-item-text text-light">terihlon</small></li>
+                            </ul>
+                        </td>
+                        <td>74</td>
+                        <td><a href="https://www.twitch.tv/videos/1934502705" target="_blank">Full</a></td>
+                    </tr>
+                    <tr class="text-center align-middle">
+                        <th scope="row"><i class="fa-solid fa-people-group"></i></th>
+                        <td class="dropup">
+                            <button class="btn dropdown-toggle text-light" type="button" data-bs-toggle="dropdown" aria-expanded="false">Horde Legends Team</button>
+                            <br><small class="text-warning">(HORDE IMMUNITY #4)</small>
+                            <ul class="dropdown-menu z-3 bg-secondary text-center fw-bold">
+                                <li><small class="dropdown-item-text text-light">LegioX Wintersky</small></li>
+                                <li><small class="dropdown-item-text text-light">gogu7382</small></li>
+                                <li><small class="dropdown-item-text text-light">HiRUnknow</small></li>
+                                <li><small class="dropdown-item-text text-light">XxFriction</small></li>
+                                <li><small class="dropdown-item-text text-light">YupItsMeh</small></li>
+                            </ul>
+                        </td>
+                        <td>72</td>
+                        <td><a href="https://www.youtube.com/watch?v=FJgskJbNE_w" target="_blank">Full</a></td>
+                    </tr>
+                    <tr class="text-center align-middle">
+                        <th scope="row"><i class="fa-solid fa-people-group"></i></th>
+                        <td class="dropup">
+                            <button class="btn dropdown-toggle text-light" type="button" data-bs-toggle="dropdown" aria-expanded="false">Horde Legends Team</button>
                             <br><small class="text-warning">(HORDE IMMUNITY #3)</small>
                             <ul class="dropdown-menu z-3 bg-secondary text-center fw-bold">
                                 <li><small class="dropdown-item-text text-light">LegioX Wintersky</small></li>
@@ -367,10 +398,10 @@
                             </ul>
                         </td>
                         <td>68</td>
-                        <td><a href="https://www.youtube.com/watch?v=t_Z6wcAW2MQ&ab_channel=LegioXWintersky" target="_blank">Full</a></td>
+                        <td><a href="https://www.youtube.com/watch?v=FJgskJbNE_w" target="_blank">Full</a></td>
                     </tr>
                     <tr class="text-center align-middle">
-                        <th scope="row"></th>
+                        <th scope="row"><i class="fa-solid fa-people-group"></i></th>
                         <td class="dropup">
                             <button class="btn dropdown-toggle text-light" type="button" data-bs-toggle="dropdown" aria-expanded="false">Horde Legends Team</button>
                             <br><small class="text-warning">(HORDE IMMUNITY #2)</small>
@@ -385,7 +416,7 @@
                         <td><a href="https://www.youtube.com/watch?v=7vyWeRqXEE0&ab_channel=LegioXWintersky" target="_blank">Full</a></td>
                     </tr>
                     <tr class="text-center align-middle">
-                        <th scope="row"></th>
+                        <th scope="row"><i class="fa-solid fa-people-group"></i></th>
                         <td class="dropup">
                             <button class="btn dropdown-toggle text-light" type="button" data-bs-toggle="dropdown" aria-expanded="false">Horde Legends Team</button>
                             <br><small class="text-warning">(HORDE IMMUNITY #1)</small>
