Added players, HIXL #6

--- a/horde.html
+++ b/horde.html
@@ -360,10 +360,10 @@
                             <button class="btn dropdown-toggle text-light" type="button" data-bs-toggle="dropdown" aria-expanded="false">Horde Legends Team</button>
                             <br><small class="text-warning">(HORDE IMMUNITY #6)</small>
                             <ul class="dropdown-menu z-3 bg-secondary text-center fw-bold">
-                                <li><small class="dropdown-item-text text-light"></small></li>
-                                <li><small class="dropdown-item-text text-light"> </small></li>
-                                <li><small class="dropdown-item-text text-light"></small></li>
-                                <li><small class="dropdown-item-text text-light"></small></li>
+                                <li><small class="dropdown-item-text text-light">LegioX Wintersky</small></li>
+                                <li><small class="dropdown-item-text text-light">gogu7382</small></li>
+                                <li><small class="dropdown-item-text text-light">HiRUnknown</small></li>
+                                <li><small class="dropdown-item-text text-light">YupItsMeh</small></li>
                             </ul>
                         </td>
                         <td>8_</td>
