--- a/horde.html
+++ b/horde.html
@@ -367,7 +367,7 @@
                             </ul>
                         </td>
                         <td>8_</td>
-                        <td><a href="" target="_blank">Full</a></td>
+                        <td><a href="" target="_blank"></a></td>
                     </tr>
                     <tr class="text-center align-middle">
                         <th scope="row"><i class="fa-solid fa-people-group"></i></th>
