Horde XL Challenge final

--- a/horde.html
+++ b/horde.html
@@ -350,15 +350,29 @@
                 <tbody>
                     <tr class="text-center align-middle">
                         <th scope="row"><img src="images/firstPlace.png"><i class="fa-solid fa-people-group"></i></th>
+                        <td class="dropup">
+
+                            <button class="btn dropdown-toggle text-light" type="button" data-bs-toggle="dropdown" aria-expanded="false">Horde Legends Team</button><br><small class="text-warning">(HORDE IMMUNITY)</small>
+                            <ul class="dropdown-menu z-3 bg-secondary text-center fw-bold">
+                                <li><small class="dropdown-item-text text-light">gogu7382</small></li>
+                                <li><small class="dropdown-item-text text-light">LegioX Wintersky</small></li>
+                                <li><small class="dropdown-item-text text-light">HiRUnknown</small></li>
+                                <li><small class="dropdown-item-text text-light">YupItsMeh</small></li>
+                            </ul>
+                        </td>
+                        <td>84</td>
+                        <td><a href="https://www.youtube.com/watch?v=ON0K74PzIwg&ab_channel=LegioXWintersky" target="_blank">Full</a></td>
+                    </tr>
+                    <tr class="text-center align-middle">
+                        <th scope="row"><img src="images/secondPlace.png"><i class="fa-solid fa-people-group"></i></th>
                         <td>貓白<br><small class="text-warning">(HORDE IMMUNITY)</small></td>
                         <td>81</td>
                         <td><a href="https://www.youtube.com/watch?v=LABCyfjCNH0&list=PLDYihq39QKsn5ne3G3smRkvW-3hd8zOmi&index=1&ab_channel=%E8%B2%93%E7%99%BD" target="_blank">Part 1</a> <a href="https://www.youtube.com/watch?v=6Mu7rN6Kka8&list=PLDYihq39QKsn5ne3G3smRkvW-3hd8zOmi&index=2&ab_channel=%E8%B2%93%E7%99%BD" target="_blank">Part 2</a></td>
                     </tr>
                     <tr class="text-center align-middle">
-                        <th scope="row"><img src="images/secondPlace.png"><i class="fa-solid fa-people-group"></i></th>
+                        <th scope="row"><i class="fa-solid fa-people-group"></i></th>
                         <td class="dropup">
                             <button class="btn dropdown-toggle text-light" type="button" data-bs-toggle="dropdown" aria-expanded="false">Horde Legends Team</button>
-                            <br><small class="text-warning">(HORDE IMMUNITY #5)</small>
                             <ul class="dropdown-menu z-3 bg-secondary text-center fw-bold">
                                 <li><small class="dropdown-item-text text-light">gogu7382</small></li>
                                 <li><small class="dropdown-item-text text-light">LegioX Wintersky</small></li>
@@ -373,7 +387,6 @@
                         <th scope="row"><i class="fa-solid fa-people-group"></i></th>
                         <td class="dropup">
                             <button class="btn dropdown-toggle text-light" type="button" data-bs-toggle="dropdown" aria-expanded="false">Horde Legends Team</button>
-                            <br><small class="text-warning">(HORDE IMMUNITY #4)</small>
                             <ul class="dropdown-menu z-3 bg-secondary text-center fw-bold">
                                 <li><small class="dropdown-item-text text-light">LegioX Wintersky</small></li>
                                 <li><small class="dropdown-item-text text-light">gogu7382</small></li>
@@ -382,14 +395,13 @@
                                 <li><small class="dropdown-item-text text-light">YupItsMeh</small></li>
                             </ul>
                         </td>
-                        <td>72</td>
+                        <td>71</td>
                         <td><a href="https://www.youtube.com/watch?v=FJgskJbNE_w" target="_blank">Full</a></td>
                     </tr>
                     <tr class="text-center align-middle">
                         <th scope="row"><i class="fa-solid fa-people-group"></i></th>
                         <td class="dropup">
                             <button class="btn dropdown-toggle text-light" type="button" data-bs-toggle="dropdown" aria-expanded="false">Horde Legends Team</button>
-                            <br><small class="text-warning">(HORDE IMMUNITY #3)</small>
                             <ul class="dropdown-menu z-3 bg-secondary text-center fw-bold">
                                 <li><small class="dropdown-item-text text-light">LegioX Wintersky</small></li>
                                 <li><small class="dropdown-item-text text-light">gogu7332</small></li>
@@ -404,7 +416,6 @@
                         <th scope="row"><i class="fa-solid fa-people-group"></i></th>
                         <td class="dropup">
                             <button class="btn dropdown-toggle text-light" type="button" data-bs-toggle="dropdown" aria-expanded="false">Horde Legends Team</button>
-                            <br><small class="text-warning">(HORDE IMMUNITY #2)</small>
                             <ul class="dropdown-menu z-3 bg-secondary text-center fw-bold">
                                 <li><small class="dropdown-item-text text-light">LegioX Wintersky</small></li>
                                 <li><small class="dropdown-item-text text-light">gogu7332</small></li>
@@ -419,7 +430,6 @@
                         <th scope="row"><i class="fa-solid fa-people-group"></i></th>
                         <td class="dropup">
                             <button class="btn dropdown-toggle text-light" type="button" data-bs-toggle="dropdown" aria-expanded="false">Horde Legends Team</button>
-                            <br><small class="text-warning">(HORDE IMMUNITY #1)</small>
                             <ul class="dropdown-menu z-3 bg-secondary text-center fw-bold">
                                 <li><small class="dropdown-item-text text-light">LegioX Wintersky</small></li>
                                 <li><small class="dropdown-item-text text-light">gogu7332</small></li>
